# NexusAI-ACP

./: .env.example  .gitignore  .prettierignore  README.md  SKILL.md  package-lock.json  package.json  tsconfig.json  vercel.json
agents/: growthAgent.js  ollamaClient.js  researchAgent.js  tradingAgent.js  twitterAgent.js
backend/: nexusai.db-shm  nexusai.db-wal  package-lock.json  package.json  server.js
backend/middleware/: auth.js
backend/models/: database.js
backend/routes/: agents.js  (+4 more)
config/: default.js
frontend/: index.html  package-lock.json  package.json  style.css
nexusai-agi/: README.md  pyproject.toml
nexusai-agi/configs/: default.json
nexusai-agi/examples/: basic_usage.py  multi_agent.py
nexusai-agi/nexusai_agi/: __init__.py  cli.py
nexusai-agi/nexusai_agi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nexusai-agi/nexusai_agi/communication/: __init__.py  hub.py
nexusai-agi/nexusai_agi/core/: __init__.py  agent.py  config.py  types.py
nexusai-agi/nexusai_agi/memory/: __init__.py  manager.py  store.py
nexusai-agi/nexusai_agi/planning/: __init__.py  planner.py
nexusai-agi/nexusai_agi/reasoning/: __init__.py  engine.py
nexusai-agi/nexusai_agi/safety/: __init__.py  guardian.py
nexusai-agi/nexusai_agi/tools/: __init__.py  registry.py
nexusai-agi/tests/: test_agent.py  test_communication.py  test_memory.py  test_planning.py  test_reasoning.py  test_safety.py  test_tools.py
references/: acp-job.md  agent-token.md  agent-wallet.md  bounty.md  deploy.md  seller.md
scripts/: setup.ps1  setup.sh
(+60 files in other folders)
